[package]
name = "ssher"
version = "0.4.5"
edition = "2024"
authors = ["Pone Ding <poneding@gmail.com>"]
description = "ssher is an easy-to-use command line tool for connecting to remote servers."
categories = ["command-line-interface"]
documentation = "https://docs.rs/ssher"
repository = "https://github.com/poneding/ssher-rs"
homepage = "https://github.com/poneding/ssher-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["ssher"]

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
clap = { version = "4.5.38", features = [
    "derive",
    "string",
    "unstable-ext",
    "env",
] }
clap_complete = { version = "4.5.50", features = ["unstable-dynamic"] }
console = "0.15.11"
crossterm = "0.29.0"
dialoguer = "0.11.0"
russh = "0.52.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
shellexpand = "3.1.1"
tabled = "0.19.0"
tokio = { version = "1.45.0", features = ["full"] }
trust-dns-resolver = "0.23.2"
